# tigerdenversi

./: .gitignore  Cargo.toml  ReadMe.md
.github/workflows/: rust.yml
src/: argument.rs  bitboard.rs  data_loader.rs  kifu.rs  main.rs  neuralnet.rs  training.rs  weight.rs
