[package]
name = "tigerdenversi"
version = "0.5.0"
edition = "2021"
description = "training program for ruversi."

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.11", features = ["derive"] }
indicatif = "0.18.3"
rasciigraph = "0.3"
rand = "0.8.5"
rayon = "1.10.0"
# tch = {version = "0.16", features = ["download-libtorch"]}
tch = {version = "0.18", features = ["download-libtorch"]}
# tch = {version = "0.20", features = ["download-libtorch"]}
# tch = {version = "0.22", features = ["download-libtorch"]}

[features]
fixed_stones = []
